# psll-lang

./: .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  DEVELOPMENT.md  Gemfile  LICENSE  README.md  _config.yml  array_sum_golf.ll  ascii_trees.py  badge.json  compiler.py  context_parsing.py  cspell.json  grid_representation.py  index.md  line_chart.js  ll2ps.py  ll2pyra.py  makefile  mypy.ini  nargin_counter.psll  nargin_counter.pyra  paper.requirements.txt  pitchforked.py  psll  psll.py  psll.sh  pyproject.toml  requirements.txt  result.perf  run_coverage  run_coverage.sh  setup.py  sigbovik-psll.bib  sigbovik-psll.tex  string_expansion_test.py  (+8 more)
.github/workflows/: build.yml  perf.yml  publish.yml  test-commit.yml  test-pr.yml  test-tox.yml  tests.yml
_includes/: figure.html  figure2.html  head.html
_layouts/: default.html
_sass/: no-style-please.scss
assets/: chartjs-chart-error-bars.js  chartjs-chart-error-bars.js.map  line_chart.js
data/: perf_add_side_by_side.data  perf_pyramid_from_text.data  perf_tree_from_text.data  timing.data
examples/: arrays.psll  binary_operator_chains.psll  bubble_sort.psll  comparisons.psll  def_keyword.psll  favourite_number.psll  golf_pyramid_scheme_negation.psll  is_in_array.psll  linear_congruential_generator.psll  modulo_function.psll  nargin_counter.psll  own_source_length.psll  pseudorandom_number_generation.psll  xor.psll
perf/: perf_ascii_trees.py  perf_helpers.py
psll/: __init__.py  __main__.py  ascii_trees.py  build.py  compiler.py  lexer.py  macros.py  optimisers.py  preprocessor.py
psll-lang/: README.md  package.json  psll-config.json  psll.iro  psll.tmlanguage
psll-lang/syntaxes/: psll.iro  psll.tmlanguage  pyra.iro  pyra.tmlanguage
psll-vscode-lang/: psll.iro
sigbovik-paper/: makefile  paper.gitignore  sigbovik-psll.bib  sigbovik-psll.tex
tests/: conftest.py  record_examples.py  test_ascii_trees.py  test_examples.py  test_psll.py  test_tree_repr.py
tests/examples_outputs/: arrays-5c3d16e35fa106b82468f289397948fe.txt  binary_operator_chains-1ce1c88293f5f8503602dfe6f63a87cb.txt  bubble_sort-c21a2bf38997a74418788172a48ae3c3.txt  def_keyword-e5ad81cee3a0e623d6e90ada599bbf83.txt  linear_congruential_generator-9fda5e5df576790e87eea172ffbdceaa.txt  modulo_function-165466a25cbb23cd45f6c1440937b196.txt  modulo_function-8a1fcc7807e6b2b9946b9918d4a465bc.txt  nargin_counter-58330df325cdb3e016dbd887339729a2.txt  xor-90309f54aeb7d4ceec8621b381eae5a8.txt
